adding more to the spooky_hunt